--- a/assets/admin/css/style-editor-woocommerce.css
+++ b/assets/admin/css/style-editor-woocommerce.css
@@ -44,7 +44,7 @@
 }
 .wc-block-grid__product-add-to-cart {
     position: absolute;
-    bottom: 0;
+    bottom: -2px;
     right: 0;
 }
 .wc-block-grid__product-add-to-cart > a:after {
@@ -81,6 +81,7 @@
 	margin-bottom: 10px;
 	top: 20px;
 	left: 20px;
+	right: auto;
     text-transform: none;
 }
 .wc-block-grid__product-price .price__wrapper {
@@ -151,7 +152,8 @@
 }
 @media (max-width: 60em) and (min-width: 37.5625em) {
 	.wc-block-grid:not(.has-1-columns) .wc-block-grid__product {
-		width: calc((100% - 30.02px) /2);
+		max-width: calc((100% - 30.02px) /2);
+	    flex: 1 0 50%;
 	}
 	.wc-block-grid:not(.has-1-columns) .wc-block-grid__product:nth-child(2n) {
 		margin-right: 0;
@@ -161,8 +163,10 @@
 	}
 }
 @media (max-width: 37.5em) {
-	.wc-block-grid .wc-block-grid__product {
+	.wc-block-grid .wc-block-grid__products .wc-block-grid__product {
 		margin: 30px 0 0;
+		max-width: 100%;
+		flex: 1 0 100%;
 	}
 	.wc-block-grid .wc-block-grid__product:nth-child(1) {
 		margin-top: 0;
